# xsilium-server

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Dockerfile  README  README.md  RakNet_VS2008.sln  cmake_uninstall.cmake.in  readme.txt  xsilium.doxyfile
Debug/: client  (+3 more)
src/: CMakeLists.txt  main.cpp
src/Genrevision/: genrevision.cpp
src/Server/: CMakeLists.txt
src/Server/Auth/: AuthServer.cpp  AuthServer.h  CMakeLists.txt  auth.config
src/Server/Auth/Authentification/: Authentification.cpp  Authentification.h  AuthentificationTest.cpp
src/Server/Auth/ListServeur/: ListServeur.h
src/Server/Auth/Royaumes/: Royaume.cpp  Royaume.h  RoyaumesManager.cpp  RoyaumesManager.h  RoyaumesManagerTest.cpp
src/Server/Authentification/: AuthServer.cpp  AuthServer.h  CMakeLists.txt  auth.config
src/Server/Authentification/Authentification/Manager/: Authentification.cpp  Authentification.h  AuthentificationManager.cpp  AuthentificationManager.h
src/Server/Authentification/Realm/: Royaume.cpp  Royaume.h  RoyaumesManager.cpp  RoyaumesManager.h
src/Server/Kingdom/: CMakeList.txt  CMakeLists.txt  Kingdom.config  KingdomServer.cpp  KingdomServer.h  worldServeur.cpp  worldServeur.h
src/Server/Kingdom/Chat/: Chat.cpp  Chat.h  ChatManager.cpp  ChatManager.h  ChatTest.cpp
src/Server/Kingdom/Ticket/: Ticket.cpp  Ticket.h  TicketManager.cpp  TicketManager.h  gestionnaireTicket.h
src/Server/Kingdom/Zone/: GestionnaireZone.h
src/Server/Shared/: CMakeLists.txt
src/Server/Shared/Ban/: CompteBan.cpp  CompteBan.h
src/Server/Shared/Compte/: Compte.cpp  Compte.h  CompteBan.cpp  CompteBan.h  CompteBanTest.cpp  CompteDAO.cpp  CompteDAO.h  Comptetest.cpp
src/Server/Shared/Config/: Configuration.h  ConfigurationTest.cpp
src/Server/Shared/Configuration/: Configuration.cpp  Configuration.h  ConfigurationTest.cpp
src/Server/Shared/Connexion/: Connexion.cpp
src/Server/Shared/DAO/: DAO.cpp  DAO.h
src/Server/Shared/Databases/: CRUD.h  Database.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseManagerTest.cpp  PersoDatabase.cpp  liste des requetes.xlsx
src/Server/Shared/IP/: IP.cpp  IP.h  IPBan.cpp  IPBan.h  IPBanTest.cpp  IPTest.cpp
src/Server/Shared/Log/: Log.cpp  Log.h
src/Server/Shared/Logging/: Log.cpp  Log.h
src/Server/Shared/Manager/: Manager.cpp  Manager.h
src/Server/Shared/Model/: Model.cpp  Model.h
src/Server/Shared/Network/: MessagePacket.cpp  MessagePacket.h  NetworkListener.cpp  NetworkListener.h  NetworkManager.cpp  NetworkManager.h  NetworkManagerTest.cpp  Opcode.h
src/Server/Shared/Opcode/: Opcode.h
src/Server/Shared/Royaume/: Royaume.cpp  Royaume.h  RoyaumeTest.cpp
src/Server/Shared/Serveur/: Serveur.h
src/Server/Shared/Service/: Service.cpp  Service.h
src/Server/Shared/Session/: GestionnaireSession.h  Session.cpp  Session.h  SessionListener.cpp  SessionListener.h  SessionManager.cpp  SessionManager.h
src/Server/Shared/Signal/: SignalHandler.cpp  SignalHandler.h
src/Server/Shared/Singleton/: Singleton.h
src/Server/Shared/StructurePacket/: StructureAuth.h  StructureChat.h
src/Server/Shared/Utilities/: Utilities.cpp  Utilities.h  Utils.cpp
src/Test/: CMakeLists.txt  TestConfig.config  TestRunnerClient.cpp
src/Test/Auth/Authentification/: AuthentificationTest.cpp
src/Test/Auth/Royaumes/: RoyaumeTest.cpp  RoyaumesManagerTest.cpp
src/Test/Kingdom/Chat/: ChatTest.cpp
src/Test/Shared/Compte/: CompteBanTest.cpp  Comptetest.cpp
src/Test/Shared/Databases/: DatabaseManagerTest.cpp
src/Test/Shared/IP/: IPBanTest.cpp  IPTest.cpp
src/Test/Shared/Network/: NetworkManagerTest.cpp
src/server/: CMakeLists.txt  mainServer.cpp
src/server/Auth/: AuthServer.cpp  AuthServer.h  CMakeLists.txt  auth.config  resource.h
src/server/Auth/AuthCodes/: AuthCodes.h
src/server/Auth/Authentification/: Authentification.cpp  Authentification.h
src/server/Auth/ListServeur/: ListServeur.cpp  ListServeur.h
src/server/Auth/socket/: AuthSocket.cpp  AuthSocket.h
src/server/Kingdom/: CMakeLists.txt  Kingdom.config  worldServeur.cpp  worldServeur.h
src/server/Kingdom/Chat/: Chat.cpp  Chat.h  ChatTest.cpp
src/server/Kingdom/Mail/: Mail.cpp  Mail.h
src/server/Kingdom/Session/: GestionnaireSession.cpp  GestionnaireSession.h  Session.cpp  Session.h
src/server/Kingdom/Ticket/: gestionnaireTicket.cpp  gestionnaireTicket.h  ticket.cpp  ticket.h
src/server/Kingdom/Zone/: GestionnaireZone.cpp  GestionnaireZone.h  Zone.cpp  Zone.h
src/server/Shared/: CMakeLists.txt
src/server/Shared/Callback/: Callback.cpp  Callback.h
src/server/Shared/Compte/: Compte.cpp  Compte.h  CompteTest.cpp  GestionnaireCompte.cpp  GestionnaireCompte.h
src/server/Shared/Config/: Configuration.cpp  Configuration.h  ConfigurationTest.cpp  readConfig.cpp  readConfig.h
src/server/Shared/Connexion/: Connexion.cpp  Connexion.h  ConnexionTest.cpp
src/server/Shared/Databases/: Database.h  GestTicket.cpp  GestTicket.h  LoginDatabase.cpp  LoginDatabase.h  PersoDatabase.cpp  PersoDatabase.h  connexionDatabase.cpp  connexionDatabase.h  liste des requetes.xlsx  ~$liste des requetes.xlsx
src/server/Shared/Logging/: Log.cpp  Log.h
src/server/Shared/ModuleActif/: ModuleActif.cpp  ModuleActif.h
src/server/Shared/Network/: NetworkManager.cpp  NetworkManager.h
src/server/Shared/Opcode/: Opcode.h
src/server/Shared/PostgreSQLInterface/: PostgreSQLInterface.cpp  PostgreSQLInterface.h  connexionDatabase.cpp  connexionDatabase.h
src/server/Shared/Serveur/: Serveur.cpp  Serveur.h
src/server/Shared/Session/: GestionnaireSession.cpp  GestionnaireSession.h  Session.cpp  Session.h
src/server/Shared/SignalHandler/: SignalHandler.cpp  SignalHandler.h
src/server/Shared/Singleton/: Singleton.h
src/server/Shared/Structure/: Client.h  Packet.h  Server.h
src/server/Shared/StructurePacket/: StructureAuth.h  StructureChat.h  StructureGeneral.h  StructureMail.h  StructureTicket.h
src/server/Shared/Threading/: Threading.cpp  Threading.h
src/server/Shared/Utilities/: Utils.cpp  Utils.h
src/server/World/: CMakeLists.txt  world.config  worldServeur.cpp  worldServeur.h
(+900 files in other folders)
